# smolnes

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  deobfuscated.c  deobfuscated.cc  main.c  smolnes.c  smolnes.cc  template.txt
.github/workflows/: ci.yml
img/: rr.opt
nes_nsfplay/: common.cpp  common.h  nes_apu.cpp  nes_dmc.cpp  xtypes.h
src/: MiniFB.h  WinMiniFB.c  WinMiniFB_embedwindow.c  plugin.c  plugin.h  smbstuff.cpp
